[package]
name = "wardent"
version = "0.1.0"
edition = "2021"
description = "Custom Rust reverse proxy & API gateway"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dashmap = "6"
governor = "0.7"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nonzero_ext = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
